--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body onload="message()">
     <div id="Container" class="hide">
         <p id="ID"></p>
-        <a href="techgiants.html" ><img id ="Tech-img" src="images/Tech.jpg" height="250" width="450"></a>
-        <a href="geography.html" ><img id ="Geo-img" src="images/Geo.jpg" width="250" height="250"></a>
-        <a href="mathematics.html" ><img id ="Math-img" src="images/Math.jpg" hieght="550 "width="550"></a>
+        <a href="techgiants.html" ><img id ="Tech-img" src="Tech.jpg" height="250" width="450"></a>
+        <a href="geography.html" ><img id ="Geo-img" src="Geo.jpg" width="250" height="250"></a>
+        <a href="mathematics.html" ><img id ="Math-img" src="Math.jpg" hieght="550 "width="550"></a>
         
     </div>
 </body>
